# slrun

./: .gitignore  README.md  pyproject.toml  test.py
.github/workflows/: publish.yml
docs/: usage.md
src/slrun/: __init__.py  cli.py  slrun.py
src/slurm_tools/: __init__.py  cli.py  srun.py
