[build-system]
requires = ["hatchling>=0.22.0", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "slrun"
dynamic = ["version"]
description = "Run commands on SLURM as if local with seamless detach/reattach"
readme = "README.md"
authors = [
    {name = "Yash Savani", email = "yash.savani@gmail.com"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: System :: Clustering",
]
keywords = ["slurm", "cluster", "hpc", "scheduler"]
requires-python = ">=3.6"
dependencies = []  # Add any dependencies if needed

[tool.hatch.version]
source = "vcs"

[project.urls]
"Homepage" = "https://github.com/yashsavani/slrun"
"Bug Tracker" = "https://github.com/yashsavani/slrun/issues"

[project.scripts]
slrun = "slrun.cli:main"  # This creates a 'slrun' command

[tool.hatch.build.targets.wheel]
packages = ["src/slrun"]

[dependency-groups]
dev = [
    "hatchling>=0.22.0",
    "hatch-vcs",
]
